api: read workspace choice from .yaml file, validaate it. Add an endopoint to list available workspaces
Closes reanahub/reana-client#546
