# reana_server/rest/workflows.py
@@ -19,6 +19,7 @@ from flask import jsonify, request, stream_with_context
 from reana_commons.config import REANA_WORKFLOW_ENGINES
 from reana_commons.errors import REANAQuotaExceededError, REANAValidationError
 from reana_commons.operational_options import validate_operational_options
+from reana_commons.workspaces import validate_workspace
 from reana_db.database import Session
 from reana_db.models import (
     InteractiveSessionType,
@@ -401,10 +402,15 @@ def create_workflow(user):  # noqa
         workflow_dict["operational_options"] = validate_operational_options(
             workflow_engine, reana_spec_file.get("inputs", {}).get("options", {})
         )
+        workspace_root_path = validate_workspace(
+            reana_spec_file.get("workspace", {}).get("root_path")
+        )
         if git_data:
             workflow_dict["git_data"] = git_data
         response, http_response = current_rwc_api_client.api.create_workflow(
-            workflow=workflow_dict, user=str(user.id_)
+            workflow=workflow_dict,
+            user=str(user.id_),
+            workspace_root_path=workspace_root_path,
         ).result()
         if git_data:
             workflow = _get_workflow_with_uuid_or_name(
