# setup.py
@@ -114,6 +114,7 @@ setup(
             "reana_server_gitlab = reana_server.rest.gitlab:blueprint",
             "reana_server_config = reana_server.rest.config:blueprint",
             "reana_server_status = reana_server.rest.status:blueprint",
+            "reana_server_workspaces = reana_server.rest.workspaces:blueprint",
         ],
     },
     include_package_data=True,
